k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: zero-app
  namespace: zero-downtime

spec:
  replicas: 3

  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: zero-app

  template:
    metadata:
      labels:
        app: zero-app

    spec:
      containers:
      - name: zero-app

        image: prathmeshadhav2006/zerodowntime:7

        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        readinessProbe:
          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 10
          periodSeconds: 10

  strategy:
    blueGreen:

      activeService: zero-active

      previewService: zero-preview

      autoPromotionEnabled: false
