k8s/active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-active
  namespace: zero-downtime

spec:
  selector:
    app: zero-app

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
