k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: zero-ingress
  namespace: zero-downtime

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:

  ingressClassName: alb

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: zero-active

            port:

              number: 80

      - path: /preview

        pathType: Prefix

        backend:

          service:

            name: zero-preview

            port:

              number: 80
